# voice-flow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
prototype/: requirements.txt  validate_pipeline.py
scripts/: bump-version.sh  generate-icons.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/api/: groq.rs
src-tauri/src/audio/: capture.rs  encoder.rs
src-tauri/src/commands/: injector.rs  mod.rs  overlay.rs  pipeline.rs  storage.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/storage/: database.rs  models.rs
src-tauri/src/tray/: mod.rs
src/components/: CostTracker.tsx  MetricsWidget.tsx  Onboarding.tsx  RecordingIndicator.tsx  TranscriptionCard.tsx
src/hooks/: useTauriEvents.ts
src/i18n/: en.json  es.json  index.ts  pt.json
src/pages/: Dashboard.tsx  Overlay.tsx  Settings.tsx
src/stores/: pipelineStore.ts  settingsStore.ts
