[package]
name = "voice-flow"
version = "0.2.0"
description = "Open-source voice dictation app"
authors = ["VoiceFlow Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"
enigo = { version = "0.3", features = ["serde"] }
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "apple-native"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
